/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.apache.ratis.proto.netty";
option java_outer_classname = "NettyProtos";
option java_generate_equals_and_hash = true;
package ratis.netty;

import "Raft.proto";

message RaftNettyExceptionReplyProto {
  ratis.common.RaftRpcReplyProto rpcReply = 1;
  bytes exception = 2;
}

message RaftNettyServerRequestProto {
  oneof raftNettyServerRequest {
    ratis.common.RequestVoteRequestProto requestVoteRequest = 1;
    ratis.common.AppendEntriesRequestProto appendEntriesRequest = 2;
    ratis.common.InstallSnapshotRequestProto installSnapshotRequest = 3;
    ratis.common.RaftClientRequestProto raftClientRequest = 4;
    ratis.common.SetConfigurationRequestProto setConfigurationRequest = 5;
    ratis.common.GroupManagementRequestProto groupManagementRequest = 6;
    ratis.common.GroupListRequestProto groupListRequest = 7;
    ratis.common.GroupInfoRequestProto groupInfoRequest = 8;
    ratis.common.TransferLeadershipRequestProto transferLeadershipRequest = 9;
    ratis.common.StartLeaderElectionRequestProto startLeaderElectionRequest = 10;
    ratis.common.SnapshotManagementRequestProto snapshotManagementRequest = 11;
    ratis.common.LeaderElectionManagementRequestProto leaderElectionManagementRequest = 12;
  }
}

message RaftNettyServerReplyProto {
  oneof raftNettyServerReply {
    ratis.common.RequestVoteReplyProto requestVoteReply = 1;
    ratis.common.AppendEntriesReplyProto appendEntriesReply = 2;
    ratis.common.InstallSnapshotReplyProto installSnapshotReply = 3;
    ratis.common.RaftClientReplyProto raftClientReply = 4;
    ratis.common.GroupListReplyProto groupListReply = 5;
    ratis.common.GroupInfoReplyProto groupInfoReply = 6;
    RaftNettyExceptionReplyProto exceptionReply = 7;
    ratis.common.StartLeaderElectionReplyProto startLeaderElectionReply = 8;
  }
}
